add pricing to the TODO

--- a/TODO
+++ b/TODO
@@ -21,3 +21,5 @@ get some useful content on the search "no matches" page
 check wording of social links
 
 check rendering on IE
+
+add pricing information
