Improve mobile + IE layouts.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Buying / Delivery links to somewhere? Etsy terms page?
 
+welcome text on mobile homepage
+
 carousel_label / carousel_detail for most products
 
 etsy_url for Beach Huts Tote Bag
@@ -20,6 +22,7 @@ get some useful content on the search "no matches" page
 
 check wording of social links
 
+add pricing information
+
 check rendering on IE
 
-add pricing information
