--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,11 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  number:
+    currency:
+      format:
+        unit: '&pound;'
+        delimiter: ','
+        separator: '.'
+        precision: 2
+        format: '%u%n'
